Summary of important user-visible changes for miscellaneous 1.1.0:
-------------------------------------------------------------------

 ** IMPORTANT NOTE:
    * the function `waitbar' has been renamed `text_waitbar'. Octave core has
      implemented a Matlab compatible `waitbar' which is imcompatible with the
      old miscellaneous `waitbar'. If you use the `waitbar' function from the
      miscellaneous package you have 3 options:
        1. replace all `waitbar' calls by `text_waitbar';
        2. fix your `waitbar' calls for the new API as per octave core. Note
           that `waitbar' is graphical tool only;
        3. use an old version of the miscellaneous package or modify the source
           to keep shadowing the octave core `waitbar'.

 ** The following functions are new:

      clip      normr     text_waitbar
      normc     sample

 ** The function clip was imported from the audio package.

 ** The functions `apply' and `map' have been deprecated. `cellfun' and
    `arrayfun' from octave core should be used instead.

 ** The function `partarray' has been deprecated. `mat2cell' from octave core
    should be used instead.

 ** Multiple bug fixes and increased input check on many functions.

 ** The function `csv2cell' now returns an empty cell in the case of empty file

 ** Package is no longer automatically loaded.

 ** improvements to help text.